fix align of headline text

--- a/source/_patterns/02-molecules/splash/_splash.scss
+++ b/source/_patterns/02-molecules/splash/_splash.scss
@@ -23,6 +23,6 @@
   }
 }
 
-.featured-major-splash-area .headline.box-headline {
+.featured-major-splash-area .headline {
   height: initial;
 }
